Removed jetty client from tests to reduce dependencies