@@ -1,32 +1,21 @@
 package scaffolding;
 
-import org.eclipse.jetty.client.HttpClient;
-import org.eclipse.jetty.client.api.ContentResponse;
-import org.eclipse.jetty.client.util.FormContentProvider;
-import org.eclipse.jetty.util.Fields;
-import org.eclipse.jetty.util.ssl.SslContextFactory;
+import io.muserver.Mutils;
+import io.muserver.murp.ReverseProxyBuilder;
 
 import java.net.URI;
 import java.net.URLEncoder;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 
 import static io.muserver.Mutils.urlEncode;
+import static java.net.http.HttpRequest.BodyPublishers.noBody;
 
 public class RestClient {
 
-    public static final HttpClient client;
-
-    static {
-        SslContextFactory.Client sslContextFactory = new SslContextFactory.Client(true);
-        sslContextFactory.setEndpointIdentificationAlgorithm("HTTPS");
-        HttpClient c = new HttpClient(sslContextFactory);
-        c.setConnectTimeout(10000);
-        try {
-            c.start();
-        } catch (Exception e) {
-            throw new RuntimeException("Unable to make client", e);
-        }
-        client = c;
-    }
+    public static final HttpClient client = ReverseProxyBuilder.createHttpClientBuilder(true).build();
 
     public static RestClient create(String appRunnerUrl) {
         if (appRunnerUrl.endsWith("/")) {
@@ -45,91 +34,109 @@ public class RestClient {
         return URI.create(routerUrl);
     }
 
-    public ContentResponse createApp(String gitUrl, String appName) throws Exception {
-        Fields fields = new Fields();
-        fields.add("gitUrl", gitUrl);
+    public HttpResponse<String> createApp(String gitUrl, String appName) throws Exception {
+
+        var sb = new StringBuilder();
+        sb.append("gitUrl=").append(Mutils.urlEncode(gitUrl));
         if (appName != null) {
-            fields.add("appName", appName);
+            sb.append("&appName=").append(Mutils.urlEncode(appName));
         }
-        return client.POST(routerUrl + "/api/v1/apps")
-            .content(new FormContentProvider(fields)).send();
+        return client.send(req(routerUrl + "/api/v1/apps")
+            .method("POST", HttpRequest.BodyPublishers.ofString(sb.toString()))
+            .header("content-type", "application/x-www-form-urlencoded")
+            .build(), HttpResponse.BodyHandlers.ofString());
     }
 
-    public ContentResponse updateApp(String gitUrl, String appName) throws Exception {
-        Fields fields = new Fields();
-        fields.add("gitUrl", gitUrl);
-        return client.newRequest(routerUrl + "/api/v1/apps/" + appName)
-            .method("PUT")
-            .content(new FormContentProvider(fields)).send();
+    private static HttpRequest.Builder req(String uri) {
+        return req(URI.create(uri));
+    }
+    private static HttpRequest.Builder req(URI uri) {
+        return HttpRequest.newBuilder(uri);
     }
 
-    public ContentResponse deploy(String app) throws Exception {
-        return client.POST(routerUrl + "/api/v1/apps/" + app + "/deploy")
+    public HttpResponse<String> updateApp(String gitUrl, String appName) throws Exception {
+        return client.send(req(routerUrl + "/api/v1/apps/" + appName)
+            .method("PUT", HttpRequest.BodyPublishers.ofString("gitUrl=" + Mutils.urlEncode(gitUrl)))
+            .header("content-type", "application/x-www-form-urlencoded")
+            .build(), HttpResponse.BodyHandlers.ofString());
+    }
+
+    public HttpResponse<String> deploy(String app) throws Exception {
+        return client.send(req(routerUrl + "/api/v1/apps/" + app + "/deploy")
+            .method("POST", noBody())
             .header("Accept", "application/json") // to simulate products like the Stash commit hook
-            .send();
+            .header("content-type", "application/json")
+            .build(), HttpResponse.BodyHandlers.ofString());
     }
 
-    public ContentResponse stop(String app) throws Exception {
-        return client.newRequest(routerUrl + "/api/v1/apps/" + app + "/stop").method("PUT").send();
+    public HttpResponse<String> stop(String app) throws Exception {
+        return client.send(req(routerUrl + "/api/v1/apps/" + app + "/stop")
+            .method("PUT", noBody()).build(), HttpResponse.BodyHandlers.ofString());
     }
 
-    public ContentResponse deleteApp(String appName) throws Exception {
-        return client.newRequest(routerUrl + "/api/v1/apps/" + appName).method("DELETE").send();
+    public HttpResponse<String> deleteApp(String appName) throws Exception {
+        return client.send(req(routerUrl + "/api/v1/apps/" + appName).method("DELETE", noBody()).build(),
+            HttpResponse.BodyHandlers.ofString());
     }
 
-    public ContentResponse homepage(String appName) throws Exception {
-        return client.GET(routerUrl + "/" + appName + "/");
+    public HttpResponse<String> homepage(String appName) throws Exception {
+        return client.send(req(routerUrl + "/" + appName + "/").build(), HttpResponse.BodyHandlers.ofString());
     }
 
-    public ContentResponse get(String url) throws Exception {
+    public HttpResponse<String> get(String url) throws Exception {
         return getAbsolute(routerUrl + url);
     }
 
-    public ContentResponse getAbsolute(String absoluteUrl) throws Exception {
-        return client.GET(absoluteUrl);
+    public HttpResponse<String> getAbsolute(String absoluteUrl) throws Exception {
+        return client.send(req(absoluteUrl).build(), HttpResponse.BodyHandlers.ofString());
     }
 
-    public ContentResponse registerRunner(String id, URI url, int maxInstances) throws Exception {
-        Fields fields = new Fields();
-        fields.add("id", id);
-        fields.add("url", url.toString());
-        fields.add("maxApps", String.valueOf(maxInstances));
-        return client.POST(routerUrl + "/api/v1/runners")
-            .content(new FormContentProvider(fields)).send();
+    public HttpResponse<byte[]> getAbsoluteByteArray(String absoluteUrl) throws Exception {
+        return client.send(req(absoluteUrl).build(), HttpResponse.BodyHandlers.ofByteArray());
     }
 
-
-    public ContentResponse updateRunner(String id, URI url, int maxInstances) throws Exception {
-        Fields fields = new Fields();
-        fields.add("url", url.toString());
-        fields.add("maxApps", String.valueOf(maxInstances));
-        return client.newRequest(routerUrl + "/api/v1/runners/" + id)
-            .method("PUT")
-            .content(new FormContentProvider(fields)).send();
+    public HttpResponse<String> registerRunner(String id, URI url, int maxInstances) throws Exception {
+        String body = "id=" + urlEncode(id) + "&url=" + urlEncode(url.toString()) + "&maxApps=" + maxInstances;
+        return client.send(req(routerUrl + "/api/v1/runners")
+            .method("POST", HttpRequest.BodyPublishers.ofString(body))
+            .header("content-type", "application/x-www-form-urlencoded")
+            .build(), HttpResponse.BodyHandlers.ofString());
     }
 
 
-    public ContentResponse getAppRunners() throws Exception {
+    public HttpResponse<String> updateRunner(String id, URI url, int maxInstances) throws Exception {
+        String body = "url=" + urlEncode(url.toString()) + "&maxApps=" + maxInstances;
+
+        return client.send(req(routerUrl + "/api/v1/runners/" + id)
+                .method("PUT", HttpRequest.BodyPublishers.ofString(body))
+                .header("content-type", "application/x-www-form-urlencoded")
+                .build(),
+                HttpResponse.BodyHandlers.ofString());
+    }
+
+
+    public HttpResponse<String> getAppRunners() throws Exception {
         return get("/api/v1/runners");
     }
 
-    public ContentResponse getSystem() throws Exception {
+    public HttpResponse<String> getSystem() throws Exception {
         return get("/api/v1/system");
     }
 
-    public ContentResponse getRunner(String id) throws Exception {
+    public HttpResponse<String> getRunner(String id) throws Exception {
         return get("/api/v1/runners/" + urlEncode(id));
     }
 
-    public ContentResponse getRunnerApps(String id) throws Exception {
+    public HttpResponse<String> getRunnerApps(String id) throws Exception {
         return get("/api/v1/runners/" + urlEncode(id) + "/apps");
     }
 
-    public ContentResponse getRunnerSystem(String id) throws Exception {
+    public HttpResponse<String> getRunnerSystem(String id) throws Exception {
         return get("/api/v1/runners/" + urlEncode(id) + "/system");
     }
 
-    public ContentResponse deleteRunner(String id) throws Exception {
-        return client.newRequest(routerUrl + "/api/v1/runners/" + URLEncoder.encode(id, "UTF-8")).method("DELETE").send();
+    public HttpResponse<String> deleteRunner(String id) throws Exception {
+        return client.send(req(routerUrl + "/api/v1/runners/" + URLEncoder.encode(id, StandardCharsets.UTF_8))
+            .method("DELETE", noBody()).build(), HttpResponse.BodyHandlers.ofString());
     }
 }
